site preview container

--- a/src/components/SitePreview/SitePreview.css
+++ b/src/components/SitePreview/SitePreview.css
@@ -1,3 +1,6 @@
 .site-preview {
-  border: solid 1px black;
+}
+
+.site-preview .site-preview-container {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
