--- a/src/components/SitePreview/SitePreview.css
+++ b/src/components/SitePreview/SitePreview.css
@@ -13,6 +13,12 @@
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.site-preview .iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 .site-preview .site-preview-container.tablet {
   width: 768px;
   height: 1024px;
