--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 *{
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  background-image: url('./images/protest.jpg');
+  height: 100vh; 
+  background-size: cover;
+  background-position: center;
 }
 
 .App {
