--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -6,31 +6,25 @@
 }
 
 .header {
-  background-image: url('./images/protest.jpg');
+  background-image: url('./images/protest-min.jpg');
   height: 100vh; 
   background-size: cover;
   background-position: center;
 }
 
-.App {
-  text-align: center;
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.hero-box { 
+  position: absolute; /* absolute is  to vertically and horizontally center */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 100%)
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
-.App-intro {
-  font-size: large;
-}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
