--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,47 @@
 * {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
-.header {
+.app-container {
+  height: 100vh;
   background-image: url('./images/protest-min.jpg');
-  height: 100vh; 
   background-size: cover;
   background-position: center;
 }
 
-.row {
-  max-width: 1140px;
-  margin: 0 auto;
+.form-container,
+.preview-container {
+  transition: all ease-out .4s;
 }
 
-.hero-box { 
-  position: absolute; /* absolute is  to vertically and horizontally center */
-  top: 50%;
-  left: 50%;
-  /*transform: translate(-50%, 87%);*/
-  transform: translate(-50%, 100%);
+.form-container {
+
+}
+
+.is-landing .form-container {
+  z-index: 1;
+}
+
+.preview-container {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.is-landing .preview-container {
+  opacity: 0;
+}
+
+.hero-box {
   background: rgba(76,76,76,.65);
   padding: 20px;
   letter-spacing: 3px;
   word-spacing: 3px;
   padding-bottom: 50px;
-  
+
 }
-
-
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
