--- a/src/App.css
+++ b/src/App.css
@@ -10,27 +10,42 @@
   background-position: center;
 }
 
+.app-container:after {
+  content: "";
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(241, 218, 205, 0.55);
+}
+
 .form-container,
 .preview-container {
-  transition: all ease-out .4s;
+  transform: translate3d(0, 0, 0);
+  transition: margin ease-in-out .4s, opacity ease-in-out .4s .4s, background ease-in-out .4s .4s;
 }
 
 .form-container {
-
+  z-index: 2;
+  position: relative;
+  background: white;;
 }
 
 .is-landing .form-container {
-  z-index: 1;
+  background: none;
 }
 
 .preview-container {
-  z-index: 0;
+  z-index: 1;
   position: absolute;
   top: 0;
   right: 0;
 }
 
 .is-landing .preview-container {
+  visibility: hidden;
   opacity: 0;
 }
 
