--- a/src/components/SitePreview/SitePreview.css
+++ b/src/components/SitePreview/SitePreview.css
@@ -10,6 +10,7 @@
   width: 320px;
   height: 568px;
   margin: 0 auto;
+  background: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
