--- a/src/components/SitePreview/SitePreview.css
+++ b/src/components/SitePreview/SitePreview.css
@@ -5,6 +5,7 @@
 }
 
 .site-preview .site-preview-container {
+  position: relative;
   overflow-x: hidden;
   overflow-y: scroll;
   width: 320px;
@@ -12,6 +13,26 @@
   margin: 0 auto;
   background: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.site-preview .site-preview-container.is-loading:after {
+  opacity: 0.3;
+  visibility: visible;
+  transition: visibility ease 0 0.1, opacity ease 0.1;
+}
+
+.site-preview .site-preview-container:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  transition: opacity ease 0.1;
+
+  visibility: hidden;
+  opacity: 0;
 }
 
 .site-preview .iframe {
